# yume-lib

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
buildscripts/: buildall.sh
buildscripts/include/: depinfo.sh  download-deps.sh  download-sdk.sh  path.sh
buildscripts/scripts/: dav1d.sh  ffmpeg.sh  fontconfig.sh  freetype2.sh  harfbuzz.sh  libxml2.sh  mbedtls.sh
gradle/: libs.versions.toml
yume-lib/: build.gradle.kts  consumer-rules.pro
yume-lib/src/main/cpp/: CMakeLists.txt
yume-lib/src/main/cpp/mediainfo/: frame_extractor.cpp  frame_loader_context.h  log.h  media_thumbnail_retriever.cpp  mediainfo.cpp  utils.cpp  utils.h
yume-lib/src/main/cpp/player/: ffaudio.cpp  ffcommon.cpp  ffcommon.h  ffmain.cpp  ffvideo.cpp
yume-lib/src/main/cpp/soundtouch_jni/: soundtouch_jni.cpp
yume-lib/src/main/cpp/subtitle/: ass_renderer.cpp
yume-lib/src/main/cpp/yuv/: yuv_to_bitmap.cpp
yume-lib/src/main/java/io/github/sakurafubuki/yume/nativelib/mediainfo/: AudioStream.kt  BitmapUtil.kt  Chapter.kt  FrameLoader.kt  MediaInfo.kt  MediaInfoBuilder.kt  MediaThumbnailRetriever.kt  PathUtil.kt  SubtitleStream.kt  VideoStream.kt
yume-lib/src/main/java/io/github/sakurafubuki/yume/nativelib/player/: FFmpegOnlyRenderersFactory.java  FfmpegAudioDecoder.java  FfmpegAudioRenderer.java  FfmpegDecoderException.java  FfmpegLibrary.java  FfmpegVideoDecoder.java  FfmpegVideoRenderer.java  YumeRenderersFactory.kt  package-info.java
yume-lib/src/main/java/io/github/sakurafubuki/yume/nativelib/renderer/: OffsetRenderer.kt  YumeTextRenderer.kt
yume-lib/src/main/java/io/github/sakurafubuki/yume/nativelib/soundtouch/: SoundTouch.java
